CREATE TABLE "Users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" nvarchar(50) NOT NULL,
  "address" nvarchar(100),
  "email" varchar(50) UNIQUE,
  "phone" varchar(15),
  "birth_date" date,
  "sex" nvarchar(3),
  "username" varchar(30) UNIQUE NOT NULL,
  "password" varchar(100) NOT NULL,
  "role" "enum(Patient,Doctor,Staff)" NOT NULL
);

CREATE TABLE "Patients" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "medical_record_number" varchar(20) UNIQUE,
  "notes" text
);

CREATE TABLE "Doctors" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "license_number" varchar(50) UNIQUE,
  "years_of_experience" int,
  "notes" text
);

CREATE TABLE "Staff" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "staff_code" varchar(20) UNIQUE,
  "position" varchar(50),
  "notes" text
);

CREATE TABLE "Appointments" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "patient_id" integer NOT NULL,
  "doctor_id" integer NOT NULL,
  "appointment_date" date NOT NULL,
  "appointment_time" time NOT NULL,
  "duration_minutes" int DEFAULT 30,
  "status" "enum(Scheduled,Completed,Cancelled,No Show)" DEFAULT 'Scheduled',
  "notes" text
);

CREATE TABLE "MedicalRecords" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "appointment_id" integer NOT NULL,
  "diagnosis" text,
  "treatment_plan" text,
  "created_at" datetime,
  "updated_at" datetime
);

CREATE TABLE "Prescriptions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "medical_record_id" integer NOT NULL,
  "date_issued" date NOT NULL,
  "expires_on" date,
  "sph_od" decimal(4,2),
  "cyl_od" decimal(4,2),
  "axis_od" integer,
  "add_power_od" decimal(4,2),
  "prism_od" varchar(10),
  "sph_os" decimal(4,2),
  "cyl_os" decimal(4,2),
  "axis_os" integer,
  "add_power_os" decimal(4,2),
  "prism_os" varchar(10),
  "notes" text
);

CREATE TABLE "Inventory" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "categoryId" int,
  "name" varchar(255),
  "quantity" int,
  "unit" varchar(50),
  "price" decimal(10,2),
  "date_added" date,
  "expiry_date" date,
  "notes" text
);

CREATE TABLE "Frames" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "item_id" int,
  "frame_type" varchar(50),
  "material" varchar(50),
  "color" varchar(50)
);

CREATE TABLE "Lenses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "item_id" int,
  "lens_type" varchar(50),
  "material" varchar(50),
  "coating" varchar(255),
  "power_range" varchar(100)
);

CREATE TABLE "Equipment" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "item_id" int,
  "model" varchar(100),
  "serial_number" varchar(100),
  "manufacturer" varchar(100),
  "date_purchased" date,
  "warranty_period" varchar(50),
  "last_maintenance" date,
  "next_maintenance" date,
  "status" "enum(In Use,Maintenance,Broken,Disposed)"
);

CREATE TABLE "Supplies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "item_id" int,
  "supply_type" varchar(100)
);

CREATE TABLE "Medicines" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "item_id" int,
  "active_ingredient" varchar(100),
  "dosage_form" varchar(100),
  "strength" varchar(100),
  "usage" varchar(255)
);

CREATE TABLE "Category" (
  "ten" nvarchar(50),
  "Id" int PRIMARY KEY
);

CREATE TABLE "Invoices" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "patient_id" int,
  "total_amount" decimal(10,2),
  "status" "enum(Unpaid,Paid,Refunded)",
  "issued_at" datetime
);

CREATE TABLE "InvoiceItems" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "invoice_id" int,
  "item_id" int,
  "quantity" int,
  "price" integer
);

CREATE TABLE "InventoryTransactions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "item_id" int,
  "type" "enum(Import,Export,Adjustment)" NOT NULL,
  "quantity" int NOT NULL,
  "unit_price" decimal(10,2) NOT NULL,
  "total_price" decimal(12,2) NOT NULL,
  "date" datetime NOT NULL,
  "staff_id" int,
  "notes" text
);

ALTER TABLE "Patients" ADD FOREIGN KEY ("user_id") REFERENCES "Users" ("id");

ALTER TABLE "Doctors" ADD FOREIGN KEY ("user_id") REFERENCES "Users" ("id");

ALTER TABLE "Staff" ADD FOREIGN KEY ("user_id") REFERENCES "Users" ("id");

ALTER TABLE "Appointments" ADD FOREIGN KEY ("patient_id") REFERENCES "Patients" ("id");

ALTER TABLE "Appointments" ADD FOREIGN KEY ("doctor_id") REFERENCES "Doctors" ("id");

ALTER TABLE "MedicalRecords" ADD FOREIGN KEY ("appointment_id") REFERENCES "Appointments" ("id");

ALTER TABLE "Prescriptions" ADD FOREIGN KEY ("medical_record_id") REFERENCES "MedicalRecords" ("id");

ALTER TABLE "Inventory" ADD FOREIGN KEY ("categoryId") REFERENCES "Category" ("Id");

ALTER TABLE "Frames" ADD FOREIGN KEY ("item_id") REFERENCES "Inventory" ("id");

ALTER TABLE "Lenses" ADD FOREIGN KEY ("item_id") REFERENCES "Inventory" ("id");

ALTER TABLE "Equipment" ADD FOREIGN KEY ("item_id") REFERENCES "Inventory" ("id");

ALTER TABLE "Supplies" ADD FOREIGN KEY ("item_id") REFERENCES "Inventory" ("id");

ALTER TABLE "Medicines" ADD FOREIGN KEY ("item_id") REFERENCES "Inventory" ("id");

ALTER TABLE "Invoices" ADD FOREIGN KEY ("patient_id") REFERENCES "Patients" ("id");

ALTER TABLE "InvoiceItems" ADD FOREIGN KEY ("invoice_id") REFERENCES "Invoices" ("id");

ALTER TABLE "InvoiceItems" ADD FOREIGN KEY ("item_id") REFERENCES "Inventory" ("id");

ALTER TABLE "InventoryTransactions" ADD FOREIGN KEY ("item_id") REFERENCES "Inventory" ("id");

ALTER TABLE "InventoryTransactions" ADD FOREIGN KEY ("staff_id") REFERENCES "Staff" ("id");
